# minecraft-aws

./: .gitignore  Cargo.toml  Procfile  README.md
data/: test_user_credentials_invalid  test_user_credentials_valid
example/: create_ec2.txt
src/: main.rs
src/aws/: mod.rs
src/aws/credentials/: role.secret  set_env.rs
src/aws/ssh/: ssh_agent.rs
src/aws/virtual_machine/: vm.rs
src/aws/virtual_machine/ec2/: instance.rs  mod.rs
src/ec2/: instance.rs
src/mc_server/: server.rs
static/: err.xhtml  index.html  index.xhtml
