[package]
name = "minecraft-aws"
version = "0.1.0"
authors = ["MeiyouMayo <meiyoumayo.1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "0.2", features = ["full"] }

csv = "1.1.3"

rust_ec2 = { path = "../rust_ec2" }

ssh2 = "0.8.2"

ron = "0.6.2"

async-trait = "0.1.41"

serde = "1.0.117"

[dev-dependencies]
tokio-test = "0.3.0"