[package]
name = "minecraft-aws"
version = "0.1.0"
authors = ["MeiyouMayo <meiyoumayo.1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rusoto_core = "0.45.0"
rusoto_ec2 = "0.45.0"
rusoto_credential = "0.45.0"
rusoto_sts = "0.45.0"
rusoto_s3 = "0.45.0"

tokio = { version = "0.2", features = ["full"] }

csv = "1.1.3"

ssh2 = "0.8.2"

ron = "0.6.2"

async-trait = "0.1.41"

serde = "1.0.117"

rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }

futures = "0.3.8"

spin_sleep = "1.0.0"

[dev-dependencies]
tokio-test = "0.3.0"